force-app/main/default/objects/Account/fields/Cbit_Clearbit__c.field-meta.xml
<CustomField>
    <fullName>Cbit_Clearbit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cbit Clearbit</label>
    <referenceTo>cbit_Clearbit__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>