force-app/main/default/objects/Account/fields/fw1__Merchant_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__Merchant_Customer_Id__c</fullName>
    <label>Merchant Customer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>