force-app/main/default/objects/Account/fields/High_Probability_Opp_Revenue__c.field-meta.xml
<CustomField>
    <fullName>High_Probability_Opp_Revenue__c</fullName>
    <label>High Probability Opp Revenue</label>
    <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Probability</field>
        <operation>greaterOrEqual</operation>
        <value>75</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>