force-app/main/default/objects/Account/fields/Won_Opp_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Won_Opp_Revenue__c</fullName>
    <label>Won Opp Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>